<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/to_parent_Background"
    tools:context=".ConsultActivity">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/edittext_size"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:padding="@dimen/edittext_padding"
        android:text="Visitor Details"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/mobile_txt_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_edittext_padding"
            android:layout_weight="0.5"
            android:padding="@dimen/layout_edittext_padding">

            <EditText
                android:id="@+id/mobile_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_no"
                android:inputType="number"
                android:maxLength="10"
                android:text=""
                android:textSize="@dimen/edittext_size"
                android:textStyle="normal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/select_date_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_edittext_padding"
            android:layout_weight="0.5"
            android:padding="@dimen/layout_edittext_padding">

            <EditText
                android:id="@+id/select_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:cursorVisible="false"
                android:editable="false"
                android:hint="@string/select_date"
                android:inputType="date"
                android:textSize="@dimen/edittext_size"
                android:textStyle="normal" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_customer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_margin="@dimen/layout_edittext_padding"
            android:layout_weight="0.3"
            android:padding="@dimen/layout_edittext_padding"
            android:src="@drawable/ic_add_a_photo_color_24dp"
            app:civ_border_color="#f7db04"
            app:civ_border_width="2dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_txt_layout"
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:layout_gravity="right"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_edittext_padding"
            android:padding="@dimen/layout_edittext_padding">

            <EditText
                android:id="@+id/name_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/patient_name"
                android:inputType="textPersonName"
                android:text=""
                android:textSize="@dimen/edittext_size"
                android:textStyle="normal" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:scrollbars="horizontal">

        <ImageView
            android:id="@+id/doc_img1"
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="140dp"
            android:padding="@dimen/edittext_padding"
            android:src="@drawable/ic_camera_alt_grey_24dp" />

        <ImageView
            android:id="@+id/doc_img2"
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="140dp"
            android:padding="@dimen/edittext_padding"
            android:src="@drawable/ic_camera_alt_grey_24dp" />

        <ImageView
            android:id="@+id/doc_img3"
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="140dp"
            android:padding="@dimen/edittext_padding"
            android:src="@drawable/ic_camera_alt_grey_24dp"/>
        <ImageView
            android:id="@+id/doc_img4"
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="140dp"
            android:padding="@dimen/edittext_padding"
            android:src="@drawable/ic_camera_alt_grey_24dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/problems_txt_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_edittext_padding"
            android:layout_marginRight="@dimen/layout_edittext_padding"
            android:layout_weight="1"
            android:paddingLeft="@dimen/layout_edittext_padding"
            android:paddingRight="@dimen/layout_edittext_padding"
            android:paddingTop="@dimen/layout_edittext_padding">

            <EditText
                android:id="@+id/problems_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/edittext_padding"
                android:layout_marginRight="@dimen/edittext_padding"
                android:layout_marginTop="@dimen/edittext_padding"
                android:autoText="false"
                android:background="@color/app_lite_white_bg"
                android:freezesText="true"
                android:gravity="top|left"
                android:hint="@string/problems"
                android:inputType="textMultiLine"
                android:lines="10"
                android:maxLength="1000"
                android:maxLines="10"
                android:overScrollMode="always"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="@dimen/edittext_padding"
                android:scrollHorizontally="false"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:text=""
                android:textDirection="firstStrong"
                android:textSize="@dimen/edittext_size"
                android:textStyle="normal" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:gravity="center">

        <Button
            android:id="@+id/submit_details"
            style="@dimen/textAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/btn_marginBottom"
            android:layout_marginTop="@dimen/btn_marginTop"
            android:layout_weight="0.5"
            android:background="@color/colorPrimary"
            android:elevation="10dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
</ScrollView>